; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/extr_zend_accelerator_util_funcs.c_create_persistent_script.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/extr_zend_accelerator_util_funcs.c_create_persistent_script.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32 }

@ZEND_FUNCTION_DTOR = common dso_local global i32 0, align 4
@ZEND_CLASS_DTOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @create_persistent_script() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = call i64 @emalloc(i32 8)
  %3 = inttoptr i64 %2 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %3, %struct.TYPE_6__** %1, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %5 = call i32 @memset(%struct.TYPE_6__* %4, i32 0, i32 8)
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 1
  %9 = load i32, i32* @ZEND_FUNCTION_DTOR, align 4
  %10 = call i32 @zend_hash_init(i32* %8, i32 0, i32* null, i32 %9, i32 0)
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* @ZEND_CLASS_DTOR, align 4
  %15 = call i32 @zend_hash_init(i32* %13, i32 0, i32* null, i32 %14, i32 0)
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  ret %struct.TYPE_6__* %16
}

declare dso_local i64 @emalloc(i32) #1

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @zend_hash_init(i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
